Added download info

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 
   <div id="downloads" class="row">
     <h3>Downloads</h3>
+    <p>SFVC is in beta, and will probably have frequent and/or significant updates.</p>
+    <p>Binaries comming soon.</p>
+    <p>Until then, you can <a href="https://github.com/NRauh/SFVC/archive/master.zip">download the source</a> and compile it yourself*. (Note: You'll need Qt and a copy of FFmpeg in the same directory as the compiled copy of SFVC)</p>
+    <em>*Untested on Windows</em>
   </div>
 </div>
 
